--- a/video.css
+++ b/video.css
@@ -98,6 +98,7 @@
     opacity: 0;
     pointer-events: none;
     white-space: nowrap;
+    height: 14px;
   }
   .yotuber-info:hover .tooltip {
     opacity: 1;
